--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, 'Tenor Sans', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,6 +16,7 @@
 
 a {
   font-weight: 500;
+	font-family: 'Tenor Sans', sans-serif;
   color: #646cff;
   text-decoration: inherit;
 }
@@ -25,6 +26,7 @@ a:hover {
 
 body {
   margin: 0;
+	font-family: 'Tenor Sans', sans-serif;
   display: flex;
   place-items: center;
   min-width: 320px;
@@ -34,6 +36,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+	font-family: 'Tenor Sans', sans-serif;
 }
 
 button {
@@ -44,6 +47,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+	font-family: 'Tenor Sans', sans-serif;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -58,12 +62,15 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
+		font-family: 'Tenor Sans', sans-serif;
     background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
+		font-family: 'Tenor Sans', sans-serif;
   }
   button {
     background-color: #f9f9f9;
+		font-family: 'Tenor Sans', sans-serif;
   }
 }
