--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,7 +6,7 @@
 	align-items: center;
 	justify-content: center;
 	background-color: darkorchid;
-	padding: 2rem;
+	padding: 1rem;
 }
 
 .home-header {
@@ -16,4 +16,24 @@
 	align-items: center;
 	justify-content: center;
 	border-bottom: 0.2rem solid snow;
+}
+
+.home-content {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.home-content > section {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.home-content > section > h1 {
+	color: snow;
+	font-weight: 700;
 }
