--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -9,25 +9,6 @@
 	padding: 1rem;
 }
 
-.login-header {
-	width: 100%;
-	height: 15%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.login-header > h1 {
-	font-weight: 700;
-	color: snow;
-	font-size: 2rem;
-}
-
-.login-header > img {
-	width: 3rem;
-	height: 3rem;
-	margin-right: 1rem;
-}
 
 .login-section {
 	width: 100%;
@@ -76,8 +57,8 @@
 .login-input > input {
 	display: flex;
 	width: 75%;
-	border: none;
 	background-color: snow;
+	color: black;
 	border: 0.15rem solid darkgray;
 	border-radius: 0.2rem;
 }
@@ -95,6 +76,13 @@
 	background-color: deeppink;
 }
 
+.login-field > a {
+	color: snow;
+	text-decoration: underline;
+	margin-top: 0.4rem;
+	font-size: 0.8rem;
+}
+
 .login-section > p {
 	display: flex;
 	width: 100%;
@@ -107,7 +95,7 @@
 
 .login-facebook {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	width: 100%;
 	align-items: center;
 	justify-content: center;
@@ -115,26 +103,21 @@
 
 .login-facebook > a {
 	display: flex;
-	flex-direction: row;
 	width: 100%;
-	align-items: start;
+	align-items: center;
 	justify-content: center;
 	border-radius: 1rem;
+	margin-bottom: 0.4rem;
 
 	background-color: midnightblue;
 	border: 0.2rem solid snow;
 }
 
-.login-facebook > a > img {
-	width: 2rem;
-	height: 2rem;
-	margin-right: 1rem;
-}
-
 .login-facebook > a > p {
-	font-size: 1.2rem;
+	font-size: 2rem;
 	color: snow;
 	font-weight: 700;
+	margin: 0;
 }
 
 .login-create-account {
@@ -164,7 +147,7 @@
 	display: flex;
 	width: 100%;
 	height: 40%;
-	align-items: baseline;
+	align-items: center;
 	justify-content: center;
 	border-radius: 1rem;
 	background-color: crimson;
@@ -181,4 +164,5 @@
 	font-size: 1.2rem;
 	color: snow;
 	font-weight: 700;
+	margin: 0;
 }
