feat: add forgot

--- a/src/styles/inline-header.css
+++ b/src/styles/inline-header.css
@@ -8,8 +8,21 @@
 	padding: 0 0.2rem;
 }
 
-.inline-header > img {
-	width: 3rem;
-	height: 3rem;
+.inline-header-icons {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	width: 50%;
+}
+
+.inline-header-icons > a > img {
+	width: 2rem;
+	height: 2rem;
+	margin: 0 0.2rem;
+}
+
+.inline-header-icons > img {
+	width: 2rem;
+	height: 2rem;
 	margin: 0 0.2rem;
 }
