--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -22,6 +22,8 @@
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
 	width: 100%;
 }
 
@@ -34,6 +36,10 @@
 }
 
 .home-content > section > h1 {
+	width: 100%;
+	margin: 0.4rem 0;
+	text-align: center;
+	font-size: 1.8rem;
 	color: snow;
 	font-weight: 700;
 }
