--- a/src/styles/frame.css
+++ b/src/styles/frame.css
@@ -6,7 +6,7 @@
 	justify-content: center;
 	width: 100%;
 	height: calc(100vh - 20%);
-	background-color: forestgreen;
+	background-color: steelblue;
 	margin: 1rem 0;
 }
 
@@ -17,7 +17,6 @@
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	background-color: steelblue;
 }
 
 .frame-stream > img {
@@ -46,7 +45,8 @@
 }
 
 .frame-stream > button {
-	margin: 0;
+	margin: 0 1rem;
+	padding: 0.6rem;
 	background-color: fuchsia;
 	align-self: flex-end;
 }
@@ -56,20 +56,44 @@
 	display: flex;
 	width: 100%;
 	height: 16rem;
+	background-color: cadetblue; 
 	align-items: center;
 	justify-content: flex-start;
 	overflow: scroll;
+	flex-wrap: nowrap;
 	flex-direction: column;
-	background-color: blue;
 }
 
 .frame-input {
 	display: flex;
 	width: 100%;
+	padding: 0 0.4rem;
 	height: 5rem;
-	align-items: center;
-	justify-content: flex-start;
+	align-items: flex-end;
+	justify-content: space-between;
 	overflow: scroll;
-	flex-direction: column;
-	background-color: green;
+}
+
+.frame-input > input {
+	width: 75%;
+	height: 60%;
+	background-color: snow;
+	color: darkgray;
+	border: none;
+	border-radius: 1rem;
+}
+
+.frame-input > button {
+	width: 20%;
+	height: 60%;
+	display: flex;
+	align-items: center;
+	border-radius: 50rem;
+	justify-content: center;
+	background-color: cadetblue;
+}
+
+.frame-input > button > img {
+	width: 2rem;
+	height: 2rem;
 }
