--- a/src/styles/forgot.css
+++ b/src/styles/forgot.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	background-color: darkorchid;
+	background-color: var(--thirdiary-color);
 	padding: 1rem;
 }
 
@@ -16,15 +16,13 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: blueviolet;
-	border: 0.16rem solid snow;
 	border-radius: 1rem;
 	padding: 0 0.4rem;
 }
 
 .forgot-section > h2 {
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1.4rem;
 	height: 10%;
 }
@@ -42,6 +40,7 @@
 	justify-content: space-between;
 	width: 100%;
 	height: 20%;
+	border: none;
 	margin: 0.2rem 0;
 }
 
@@ -49,7 +48,7 @@
 	display: flex;
 	width: 20%;
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1rem;
 }
 
@@ -67,6 +66,7 @@
 	flex-direction: column;
 	width: 100%;
 	align-items: center;
+	border: none;
 	justify-content: center;
 }
 
@@ -77,8 +77,7 @@
 	justify-content: center;
 	border-radius: 1rem;
 	margin-bottom: 0.4rem;
-
-	background-color: deeppink;
+	background-color: var(--secondary-color);
 	border: 0.2rem solid snow;
 }
 
