--- a/src/styles/frame.css
+++ b/src/styles/frame.css
@@ -6,7 +6,6 @@
 	justify-content: center;
 	width: 100%;
 	height: calc(100vh - 20%);
-	background-color: steelblue;
 	margin: 1rem 0;
 }
 
@@ -34,20 +33,20 @@
 
 .frame-description > h1 {
 	font-size: 2rem;
-	color: snow;
+	color: black;
 	font-weight: 700;
 }
 
 .frame-description > h2 {
 	font-size: 1rem;
-	color: snow;
+	color: black;
 	font-weight: 700;
 }
 
 .frame-stream > button {
 	margin: 0 1rem;
 	padding: 0.6rem;
-	background-color: fuchsia;
+	background-color: var(--primary-color);
 	align-self: flex-end;
 }
 
@@ -56,7 +55,9 @@
 	display: flex;
 	width: 100%;
 	height: 16rem;
-	background-color: cadetblue; 
+	background-color: var(--secondary-color); 
+	margin: 0.5rem 0;
+	border-radius: 1rem;
 	align-items: center;
 	justify-content: flex-start;
 	overflow: scroll;
@@ -90,7 +91,7 @@
 	align-items: center;
 	border-radius: 50rem;
 	justify-content: center;
-	background-color: cadetblue;
+	background-color: var(--primary-color);
 }
 
 .frame-input > button > img {
