--- a/src/styles/inline-header.css
+++ b/src/styles/inline-header.css
@@ -4,7 +4,7 @@
 	height: 20%;
 	align-items: center;
 	justify-content: space-between;
-	background-color: red;
+	background-color: var(--secondary-color);
 	padding: 0 0.2rem;
 }
 
