--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	background-color: darkorchid;
+	background-color: var(--thirdiary-color);
 	padding: 1rem;
 }
 
@@ -17,15 +17,13 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: blueviolet;
-	border: 0.16rem solid snow;
 	border-radius: 1rem;
 	padding: 0 0.4rem;
 }
 
 .login-section > h2 {
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1.4rem;
 	height: 10%;
 }
@@ -50,7 +48,7 @@
 	display: flex;
 	width: 20%;
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1rem;
 }
 
@@ -73,11 +71,11 @@
 	margin-top: 2rem;
 	border-radius: 1rem;
 	border: 0.2rem solid snow;
-	background-color: deeppink;
+	background-color: var(--secondary-color);
 }
 
 .login-field > a {
-	color: snow;
+	color: black;
 	text-decoration: underline;
 	margin-top: 0.4rem;
 	font-size: 0.8rem;
@@ -89,7 +87,7 @@
 	align-items: center;
 	justify-content: center;
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1.2rem;
 }
 
@@ -109,13 +107,12 @@
 	border-radius: 1rem;
 	margin-bottom: 0.4rem;
 
-	background-color: midnightblue;
-	border: 0.2rem solid snow;
+	background-color: var(--primary-color);
 }
 
 .login-facebook > a > p {
 	font-size: 2rem;
-	color: snow;
+	color: black;
 	font-weight: 700;
 	margin: 0;
 }
@@ -131,7 +128,7 @@
 
 .login-create-account > a {
 	text-decoration: underline;
-	color: snow;
+	color: black;
 
 }
 
@@ -150,19 +147,12 @@
 	align-items: center;
 	justify-content: center;
 	border-radius: 1rem;
-	background-color: crimson;
-	border: 0.2rem solid snow;
-}
-
-.login-footer > a > img {
-	width: 2rem;
-	height: 2rem;
-	margin-right: 1rem;
 }
 
 .login-footer > a > p {
 	font-size: 1.2rem;
-	color: snow;
+	color: black;
 	font-weight: 700;
+	text-decoration: underline;
 	margin: 0;
 }
