--- a/src/styles/new-account.css
+++ b/src/styles/new-account.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	background-color: darkorchid;
+	background-color: var(--thirdiary-color);
 	padding: 1rem;
 }
 
@@ -17,15 +17,13 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: blueviolet;
-	border: 0.16rem solid snow;
 	border-radius: 1rem;
 	padding: 0 0.4rem;
 }
 
 .new-account-section > h2 {
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1.4rem;
 	height: 10%;
 }
@@ -50,7 +48,7 @@
 	display: flex;
 	width: 20%;
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1rem;
 }
 
@@ -73,18 +71,18 @@
 	margin-top: 2rem;
 	border-radius: 1rem;
 	border: 0.2rem solid snow;
-	background-color: deeppink;
+	background-color: var(--secondary-color);
 }
 
 .new-account-step-two > h3 {
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1.2rem;
 	height: 15%;
 }
 
 .new-account-step-two > a {
-	color: snow;
+	color: black;
 	text-decoration: underline;
 	margin-top: 0.4rem;
 	font-size: 0.8rem;
@@ -100,7 +98,7 @@
 	margin-top: 2rem;
 	border-radius: 1rem;
 	border: 0.2rem solid snow;
-	background-color: deeppink;
+	background-color: var(--secondary-color);
 }
 
 .new-account-create-account {
@@ -114,7 +112,7 @@
 
 .new-account-create-account > a {
 	text-decoration: underline;
-	color: snow;
+	color: black;
 }
 
 .new-account-step-three {
@@ -128,7 +126,7 @@
 
 .new-account-step-three > h3 {
 	font-weight: 700;
-	color: snow;
+	color: black;
 	font-size: 1.2rem;
 }
 
@@ -150,7 +148,7 @@
 	align-items: center;
 	justify-content: center;
 	border-radius: 1rem;
-	background-color: crimson;
+	background-color: var(--primary-color);
 	border: 0.2rem solid snow;
 	font-size: 1.2rem;
 }
