--- a/src/styles/room.css
+++ b/src/styles/room.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: darkorchid;
+	background-color: var(--thirdiary-color);
 	padding: 1rem;
 }
 
@@ -32,6 +32,6 @@
 	margin: 0.4rem 0;
 	text-align: center;
 	font-size: 1.8rem;
-	color: snow;
+	color: black;
 	font-weight: 700;
 }
