--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -7,7 +7,7 @@
 	width: 45%;
 	height: 12rem;
 	margin: 0.5rem;
-	border: 0.2rem solid greenyellow;
+	border: 0.1rem solid black;
 	background-color: steelblue;
 	border-radius: 1rem;
 }
@@ -37,7 +37,7 @@
 	font-size: 1rem;
 	height: 20%;
 	text-align: center;
-	color: snow;
+	color: black;
 	font-weight: 700;
 	padding: 0.2rem 0;
 }
@@ -50,7 +50,7 @@
 
 .card-is-online-false > h1 {
 	font-size: 1rem;
-	color: snow;
+	color: black;
 	text-align: center;
 	font-weight: 700;
 	padding: 0.2rem 0;
