--- a/src/styles/help.css
+++ b/src/styles/help.css
@@ -35,7 +35,7 @@
 	width: 100%;
 }
 
-.home-content > section > h1 {
+.help-content > section > h1 {
 	width: 100%;
 	margin: 0.4rem 0;
 	text-align: center;
